--- a/MASA Swallowing Assessment/index.html
+++ b/MASA Swallowing Assessment/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="MASA Swallowing Assessment - Clinical tool for evaluating swallowing function" />
+    <meta name="theme-color" content="#1976d2" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>MASA Swallowing Assessment</title>
   </head>
   <body>
